# meta-bdd

./: meson.build
doc/: notes.org
src/: cache.hh  meson.build  meta_bdd.cc  meta_bdd.hh  meta_bdd.hxx  meta_bdd_bool.cc  meta_bdd_io.cc  meta_bdd_utils.cc  petri_net.cc  petri_net.hh  pmbdd.cc  upset.cc  upset.hh
src/labels/: abcbdd.hh  buddybdd.hh  sylvanbdd.hh
src/meta_bdd_states_are_bddvars/: meta_bdd.hh  meta_bdd.hxx  meta_bdd_bool.hxx  meta_bdd_io.hxx  meta_bdd_utils.hxx
src/meta_bdd_states_are_ints/: meta_bdd.hh  meta_bdd.hxx  meta_bdd_bool.hxx  meta_bdd_io.hxx  meta_bdd_utils.hxx
src/tools/: meson.build  petri_net.cc  petri_net.hh  pmbdd.cc  ptriv.cc
src/upset/: meson.build  upset_adhoc.hh  upset_adhoc.hxx  upset_bdd.cc  upset_bdd.hh  upset_bdd.hxx
src/utils/: abcbdd.cc  abcbdd.hh  abcbdd.hxx  bdd_io.hh  buddybdd.hh  cache.hh  meson.build  ref_dlg_cmp.hh  transduct_bdd.hh
subprojects/: .gitignore  sylvan.wrap
subprojects/buddy/: bddio.hxx  bddop.hxx  bddtree.hxx  buddy.cc  bvec.hxx  cache.hxx  fdd.hxx  imatrix.hh  imatrix.hxx  kernel.hh  kernel.hxx  masterbdd.hh  meson.build  pairs.hxx  prime.hxx  reorder.hxx  types.hh
subprojects/sylvan-wrap/: meson.build
subprojects/sylvan-wrap/subprojects/: sylvan.wrap
tests/: mbdd-states_are_ints-tests.cc  mbdd-tests.cc  meson.build  tests.hh  upset-tests.cc
